// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/pagination/demo/basic.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="ant-pagination-disabled ant-pagination-prev"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/changer.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3 ant-pagination-item-active"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    >
      <div
        class="ant-pagination-item-container"
      >
        <i
          class="anticon anticon-double-right ant-pagination-item-link-icon"
        >
          <svg
            aria-hidden="true"
            class="ant-pagination-item-link-icon-svg"
            data-icon="double-right"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M431 879.4c-15.1-18.8-12.1-46.3 6.7-61.4l381.5-306.9-379.6-305c-18.8-15.1-21.8-42.6-6.7-61.4 15.1-18.8 42.6-21.8 61.4-6.7l422 339.1c10.3 8.2 16.3 20.8 16.3 34 0 13.3-6 25.8-16.3 34.1L492.5 886.1c-8.1 6.4-17.8 9.6-27.4 9.6-12.8 0-25.4-5.6-34.1-16.3z"
            />
            <path
              d="M101 879.4c-15.1-18.8-12.1-46.3 6.7-61.4l381.5-306.9-379.6-305c-18.8-15.1-21.8-42.6-6.7-61.4 15.1-18.8 42.6-21.8 61.4-6.7l422 339.1c10.3 8.2 16.3 20.8 16.3 34 0 13.3-6 25.8-16.3 34.1L162.5 886.1c-8.1 6.4-17.8 9.6-27.4 9.6-12.8 0-25.4-5.6-34.1-16.3z"
            />
          </svg>
        </i>
        <span
          class="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="ant-pagination-options"
  >
    <div
      class="ant-pagination-options-size-changer ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="10 / page"
          >
            10 / page
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="down"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/controlled.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3 ant-pagination-item-active"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/itemRender.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="ant-pagination-disabled ant-pagination-prev"
    title="Previous Page"
  >
    <a>
      Previous
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    >
      <div
        class="ant-pagination-item-container"
      >
        <i
          class="anticon anticon-double-right ant-pagination-item-link-icon"
        >
          <svg
            aria-hidden="true"
            class="ant-pagination-item-link-icon-svg"
            data-icon="double-right"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M431 879.4c-15.1-18.8-12.1-46.3 6.7-61.4l381.5-306.9-379.6-305c-18.8-15.1-21.8-42.6-6.7-61.4 15.1-18.8 42.6-21.8 61.4-6.7l422 339.1c10.3 8.2 16.3 20.8 16.3 34 0 13.3-6 25.8-16.3 34.1L492.5 886.1c-8.1 6.4-17.8 9.6-27.4 9.6-12.8 0-25.4-5.6-34.1-16.3z"
            />
            <path
              d="M101 879.4c-15.1-18.8-12.1-46.3 6.7-61.4l381.5-306.9-379.6-305c-18.8-15.1-21.8-42.6-6.7-61.4 15.1-18.8 42.6-21.8 61.4-6.7l422 339.1c10.3 8.2 16.3 20.8 16.3 34 0 13.3-6 25.8-16.3 34.1L162.5 886.1c-8.1 6.4-17.8 9.6-27.4 9.6-12.8 0-25.4-5.6-34.1-16.3z"
            />
          </svg>
        </i>
        <span
          class="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a>
      Next
    </a>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/jump.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2 ant-pagination-item-active"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    >
      <div
        class="ant-pagination-item-container"
      >
        <i
          class="anticon anticon-double-right ant-pagination-item-link-icon"
        >
          <svg
            aria-hidden="true"
            class="ant-pagination-item-link-icon-svg"
            data-icon="double-right"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M431 879.4c-15.1-18.8-12.1-46.3 6.7-61.4l381.5-306.9-379.6-305c-18.8-15.1-21.8-42.6-6.7-61.4 15.1-18.8 42.6-21.8 61.4-6.7l422 339.1c10.3 8.2 16.3 20.8 16.3 34 0 13.3-6 25.8-16.3 34.1L492.5 886.1c-8.1 6.4-17.8 9.6-27.4 9.6-12.8 0-25.4-5.6-34.1-16.3z"
            />
            <path
              d="M101 879.4c-15.1-18.8-12.1-46.3 6.7-61.4l381.5-306.9-379.6-305c-18.8-15.1-21.8-42.6-6.7-61.4 15.1-18.8 42.6-21.8 61.4-6.7l422 339.1c10.3 8.2 16.3 20.8 16.3 34 0 13.3-6 25.8-16.3 34.1L162.5 886.1c-8.1 6.4-17.8 9.6-27.4 9.6-12.8 0-25.4-5.6-34.1-16.3z"
            />
          </svg>
        </i>
        <span
          class="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="ant-pagination-options"
  >
    <div
      class="ant-pagination-options-quick-jumper"
    >
      Goto
      <input
        type="text"
        value=""
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/mini.md correctly 1`] = `
<div>
  <ul
    class="ant-pagination mini"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <a
        class="ant-pagination-item-link"
      >
        <i
          class="anticon anticon-left"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="left"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
            />
          </svg>
        </i>
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="ant-pagination-item-link"
      >
        <i
          class="anticon anticon-right"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
            />
          </svg>
        </i>
      </a>
    </li>
  </ul>
  <ul
    class="ant-pagination mini"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <a
        class="ant-pagination-item-link"
      >
        <i
          class="anticon anticon-left"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="left"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
            />
          </svg>
        </i>
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="ant-pagination-item-link"
      >
        <i
          class="anticon anticon-right"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
            />
          </svg>
        </i>
      </a>
    </li>
    <li
      class="ant-pagination-options"
    >
      <div
        class="ant-select-sm ant-pagination-options-size-changer ant-select ant-select-enabled"
      >
        <div
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-select-selection
            ant-select-selection--single"
          role="combobox"
          tabindex="0"
        >
          <div
            class="ant-select-selection__rendered"
          >
            <div
              class="ant-select-selection-selected-value"
              style="display:block;opacity:1"
              title="10 / page"
            >
              10 / page
            </div>
          </div>
          <span
            class="ant-select-arrow"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            <i
              class="anticon anticon-down ant-select-arrow-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="down"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
                />
              </svg>
            </i>
          </span>
        </div>
      </div>
      <div
        class="ant-pagination-options-quick-jumper"
      >
        Goto
        <input
          type="text"
          value=""
        />
      </div>
    </li>
  </ul>
  <ul
    class="ant-pagination mini"
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-total-text"
    >
      Total 50 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <a
        class="ant-pagination-item-link"
      >
        <i
          class="anticon anticon-left"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="left"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
            />
          </svg>
        </i>
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="ant-pagination-item-link"
      >
        <i
          class="anticon anticon-right"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
            />
          </svg>
        </i>
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/pagination/demo/more.md correctly 1`] = `
<ul
  class="ant-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-jump-prev ant-pagination-jump-prev-custom-icon"
    tabindex="0"
    title="Previous 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    >
      <div
        class="ant-pagination-item-container"
      >
        <i
          class="anticon anticon-double-left ant-pagination-item-link-icon"
        >
          <svg
            aria-hidden="true"
            class="ant-pagination-item-link-icon-svg"
            data-icon="double-left"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M558.9 895.7c-9.6 0-19.3-3.2-27.4-9.6L107.7 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L586.3 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
            />
            <path
              d="M888.9 895.7c-9.6 0-19.3-3.2-27.4-9.6L437.7 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L916.3 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
            />
          </svg>
        </i>
        <span
          class="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4 ant-pagination-item-after-jump-prev"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-6 ant-pagination-item-active"
    tabindex="0"
    title="6"
  >
    <a>
      6
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-7"
    tabindex="0"
    title="7"
  >
    <a>
      7
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-8 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="8"
  >
    <a>
      8
    </a>
  </li>
  <li
    class="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    >
      <div
        class="ant-pagination-item-container"
      >
        <i
          class="anticon anticon-double-right ant-pagination-item-link-icon"
        >
          <svg
            aria-hidden="true"
            class="ant-pagination-item-link-icon-svg"
            data-icon="double-right"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M431 879.4c-15.1-18.8-12.1-46.3 6.7-61.4l381.5-306.9-379.6-305c-18.8-15.1-21.8-42.6-6.7-61.4 15.1-18.8 42.6-21.8 61.4-6.7l422 339.1c10.3 8.2 16.3 20.8 16.3 34 0 13.3-6 25.8-16.3 34.1L492.5 886.1c-8.1 6.4-17.8 9.6-27.4 9.6-12.8 0-25.4-5.6-34.1-16.3z"
            />
            <path
              d="M101 879.4c-15.1-18.8-12.1-46.3 6.7-61.4l381.5-306.9-379.6-305c-18.8-15.1-21.8-42.6-6.7-61.4 15.1-18.8 42.6-21.8 61.4-6.7l422 339.1c10.3 8.2 16.3 20.8 16.3 34 0 13.3-6 25.8-16.3 34.1L162.5 886.1c-8.1 6.4-17.8 9.6-27.4 9.6-12.8 0-25.4-5.6-34.1-16.3z"
            />
          </svg>
        </i>
        <span
          class="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/simple.md correctly 1`] = `
<ul
  class="ant-pagination ant-pagination-simple "
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
  <li
    class="ant-pagination-simple-pager"
    title="2/5"
  >
    <input
      size="3"
      type="text"
      value="2"
    />
    <span
      class="ant-pagination-slash"
    >
      ／
    </span>
    5
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="ant-pagination-item-link"
    >
      <i
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
          />
        </svg>
      </i>
    </a>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/total.md correctly 1`] = `
<div>
  <ul
    class="ant-pagination "
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-total-text"
    >
      Total 85 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <a
        class="ant-pagination-item-link"
      >
        <i
          class="anticon anticon-left"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="left"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
            />
          </svg>
        </i>
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="ant-pagination-item-link"
      >
        <i
          class="anticon anticon-right"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
            />
          </svg>
        </i>
      </a>
    </li>
  </ul>
  <br />
  <ul
    class="ant-pagination "
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-total-text"
    >
      1-20 of 85 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <a
        class="ant-pagination-item-link"
      >
        <i
          class="anticon anticon-left"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="left"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
            />
          </svg>
        </i>
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="ant-pagination-item-link"
      >
        <i
          class="anticon anticon-right"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="right"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
            />
          </svg>
        </i>
      </a>
    </li>
  </ul>
</div>
`;
